--- a/Packages/software.kat.jetsim.common/package.json
+++ b/Packages/software.kat.jetsim.common/package.json
@@ -14,6 +14,10 @@
   "dependencies": {
     "com.livedimensions.vrrefassist": "1.0.0"
   },
+  "vpmDependencies": {
+    "com.livedimensions.vrrefassist": "1.0.0"
+  },
+
   "keywords": [
     "katsoftware",
     "jetsim"
