--- a/Packages/software.kat.jetsim.common/Runtime/KatSoftware.JetSim.Common.Runtime.asmdef
+++ b/Packages/software.kat.jetsim.common/Runtime/KatSoftware.JetSim.Common.Runtime.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "KatSoftware.JetSim.Common.Runtime"
+    "name": "KatSoftware.JetSim.Common.Runtime",
+    "rootNamespace": "",
+    "references": [
+        "GUID:99835874ee819da44948776e0df4ff1d"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
